--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -2,10 +2,7 @@
     <string name="app_name">project144.2</string>
 
     <string-array name="payment_methods_array">
-        <item>Credit Card</item>
-        <item>Debit Card</item>
-        <item>PayPal</item>
-        <item>Cash on Delivery</item>
+        <item>Credit/Debit Card</item>
         <!-- Add more payment methods as needed -->
     </string-array>
     <string name="edit_address">Edit Address</string>
